examples/invalid/test02.alice
x was a number
y was a number.
